fix: related products header wrapping on small viewports

--- a/source/stylesheets/product.css.sass
+++ b/source/stylesheets/product.css.sass
@@ -182,7 +182,10 @@ option[disabled-type="unavailable"]
   .related-products-header
     text-align: center
     margin: $marginSize * 0.5 0
-      
+
+    @media screen and (max-width: $breakpoint-small)
+      display: block
+
     .related-products-view-all-link
       margin-left: auto
 
